FIX Suppression du scrollbar-track

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -642,7 +642,7 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--scrollbar-track);
+  background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
